gi: Don't produce gir and typlib for GstRiff
The API does not follow the type naming convention. Re-enable
only if one take the time to box and rename (see (rename-to SYMBOL)
annotation) all types.

--- a/gst-libs/gst/riff/Makefile.am
+++ b/gst-libs/gst/riff/Makefile.am
@@ -20,57 +20,62 @@ libgstriff_@GST_API_VERSION@_la_LIBADD = \
 libgstriff_@GST_API_VERSION@_la_CFLAGS = $(GST_PLUGINS_BASE_CFLAGS) $(GST_BASE_CFLAGS) $(GST_CFLAGS)
 libgstriff_@GST_API_VERSION@_la_LDFLAGS = $(GST_LIB_LDFLAGS) $(GST_ALL_LDFLAGS) $(GST_LT_LDFLAGS)
 
-if HAVE_INTROSPECTION
-BUILT_GIRSOURCES = GstRiff-@GST_API_VERSION@.gir
-
-gir_headers=$(patsubst %,$(srcdir)/%, $(libgstriff_@GST_API_VERSION@include_HEADERS))
-gir_sources=$(patsubst %,$(srcdir)/%, $(libgstriff_@GST_API_VERSION@_la_SOURCES))
-
-GstRiff-@GST_API_VERSION@.gir: $(INTROSPECTION_SCANNER) libgstriff-@GST_API_VERSION@.la
-	$(AM_V_GEN)PKG_CONFIG_PATH="$(GST_PKG_CONFIG_PATH)" GI_SCANNER_DISABLE_CACHE=yes\
-		GST_PLUGIN_SYSTEM_PATH_1_0="" GST_PLUGIN_PATH_1_0="" GST_REGISTRY_UPDATE=no \
-		$(INTROSPECTION_SCANNER) -v --namespace GstRiff \
-		--nsversion=@GST_API_VERSION@ \
-		--strip-prefix=Gst \
-		--warn-all \
-		--c-include "gst/riff/riff.h" \
-		--add-include-path=$(builddir)/../tag \
-		--add-include-path=$(builddir)/../audio \
-		--add-include-path=`PKG_CONFIG_PATH="$(GST_PKG_CONFIG_PATH)" $(PKG_CONFIG) --variable=girdir gstreamer-@GST_API_VERSION@` \
-		--add-include-path=`PKG_CONFIG_PATH="$(GST_PKG_CONFIG_PATH)" $(PKG_CONFIG) --variable=girdir gstreamer-base-@GST_API_VERSION@` \
-		--library=libgstriff-@GST_API_VERSION@.la \
-		--include=GstAudio-@GST_API_VERSION@ \
-		--include=GstTag-@GST_API_VERSION@ \
-		--include=Gst-@GST_API_VERSION@ \
-		--libtool="$(top_builddir)/libtool" \
-		--pkg gstreamer-@GST_API_VERSION@ \
-		--pkg gstreamer-tag-@GST_API_VERSION@ \
-		--pkg gstreamer-audio-@GST_API_VERSION@ \
-		--pkg-export gstreamer-riff-@GST_API_VERSION@ \
-		--add-init-section="gst_init(NULL,NULL);" \
-		--output $@ \
-		$(gir_headers) \
-		$(gir_sources)
-
-# INTROSPECTION_GIRDIR/INTROSPECTION_TYPELIBDIR aren't the right place to
-# install anything - we need to install inside our prefix.
-girdir = $(datadir)/gir-1.0
-gir_DATA = $(BUILT_GIRSOURCES)
-
-typelibsdir = $(libdir)/girepository-1.0/
-
-typelibs_DATA = $(BUILT_GIRSOURCES:.gir=.typelib)
-
-%.typelib: %.gir $(INTROSPECTION_COMPILER)
-	$(AM_V_GEN)PKG_CONFIG_PATH="$(GST_PKG_CONFIG_PATH)" \
-		$(INTROSPECTION_COMPILER) \
-		--includedir=$(srcdir) \
-		--includedir=$(builddir) \
-		--includedir=$(builddir)/../tag \
-		--includedir=$(builddir)/../audio \
-		--includedir=`PKG_CONFIG_PATH="$(GST_PKG_CONFIG_PATH)" $(PKG_CONFIG) --variable=girdir gstreamer-@GST_API_VERSION@` \
-		--includedir=`PKG_CONFIG_PATH="$(GST_PKG_CONFIG_PATH)" $(PKG_CONFIG) --variable=girdir gstreamer-base-@GST_API_VERSION@` \
-		$(INTROSPECTION_COMPILER_OPTS) $< -o $(@F)
-
-CLEANFILES = $(BUILT_GIRSOURCES) $(typelibs_DATA)
-endif
+# *** GIR DISABLED for this library ***
+# 
+# This library does not respect the type naming conventions required to be
+# usable in binded languages.
+#
+#if HAVE_INTROSPECTION
+#BUILT_GIRSOURCES = GstRiff-@GST_API_VERSION@.gir
+#
+#gir_headers=$(patsubst %,$(srcdir)/%, $(libgstriff_@GST_API_VERSION@include_HEADERS))
+#gir_sources=$(patsubst %,$(srcdir)/%, $(libgstriff_@GST_API_VERSION@_la_SOURCES))
+#
+#GstRiff-@GST_API_VERSION@.gir: $(INTROSPECTION_SCANNER) libgstriff-@GST_API_VERSION@.la
+#	$(AM_V_GEN)PKG_CONFIG_PATH="$(GST_PKG_CONFIG_PATH)" GI_SCANNER_DISABLE_CACHE=yes\
+#		GST_PLUGIN_SYSTEM_PATH_1_0="" GST_PLUGIN_PATH_1_0="" GST_REGISTRY_UPDATE=no \
+#		$(INTROSPECTION_SCANNER) -v --namespace GstRiff \
+#		--nsversion=@GST_API_VERSION@ \
+#		--strip-prefix=Gst \
+#		--warn-all \
+#		--c-include "gst/riff/riff.h" \
+#		--add-include-path=$(builddir)/../tag \
+#		--add-include-path=$(builddir)/../audio \
+#		--add-include-path=`PKG_CONFIG_PATH="$(GST_PKG_CONFIG_PATH)" $(PKG_CONFIG) --variable=girdir gstreamer-@GST_API_VERSION@` \
+#		--add-include-path=`PKG_CONFIG_PATH="$(GST_PKG_CONFIG_PATH)" $(PKG_CONFIG) --variable=girdir gstreamer-base-@GST_API_VERSION@` \
+#		--library=libgstriff-@GST_API_VERSION@.la \
+#		--include=GstAudio-@GST_API_VERSION@ \
+#		--include=GstTag-@GST_API_VERSION@ \
+#		--include=Gst-@GST_API_VERSION@ \
+#		--libtool="$(top_builddir)/libtool" \
+#		--pkg gstreamer-@GST_API_VERSION@ \
+#		--pkg gstreamer-tag-@GST_API_VERSION@ \
+#		--pkg gstreamer-audio-@GST_API_VERSION@ \
+#		--pkg-export gstreamer-riff-@GST_API_VERSION@ \
+#		--add-init-section="gst_init(NULL,NULL);" \
+#		--output $@ \
+#		$(gir_headers) \
+#		$(gir_sources)
+#
+## INTROSPECTION_GIRDIR/INTROSPECTION_TYPELIBDIR aren't the right place to
+## install anything - we need to install inside our prefix.
+#girdir = $(datadir)/gir-1.0
+#gir_DATA = $(BUILT_GIRSOURCES)
+#
+#typelibsdir = $(libdir)/girepository-1.0/
+#
+#typelibs_DATA = $(BUILT_GIRSOURCES:.gir=.typelib)
+#
+#%.typelib: %.gir $(INTROSPECTION_COMPILER)
+#	$(AM_V_GEN)PKG_CONFIG_PATH="$(GST_PKG_CONFIG_PATH)" \
+#		$(INTROSPECTION_COMPILER) \
+#		--includedir=$(srcdir) \
+#		--includedir=$(builddir) \
+#		--includedir=$(builddir)/../tag \
+#		--includedir=$(builddir)/../audio \
+#		--includedir=`PKG_CONFIG_PATH="$(GST_PKG_CONFIG_PATH)" $(PKG_CONFIG) --variable=girdir gstreamer-@GST_API_VERSION@` \
+#		--includedir=`PKG_CONFIG_PATH="$(GST_PKG_CONFIG_PATH)" $(PKG_CONFIG) --variable=girdir gstreamer-base-@GST_API_VERSION@` \
+#		$(INTROSPECTION_COMPILER_OPTS) $< -o $(@F)
+#
+#CLEANFILES = $(BUILT_GIRSOURCES) $(typelibs_DATA)
+#endif
