--- a/gst/Makefile.am
+++ b/gst/Makefile.am
@@ -295,7 +295,7 @@ Gst-@GST_API_VERSION@.gir: $(INTROSPECTION_SCANNER) libgstreamer-@GST_API_VERSIO
 		--pkg gobject-2.0 \
 		--pkg gmodule-no-export-2.0 \
 		--pkg-export gstreamer-@GST_API_VERSION@ \
-		--add-init-section="gst_init(NULL, NULL);" \
+		--add-init-section="$(INTROSPECTION_INIT)" \
 		--output $@ \
 		$(gir_headers) \
 		$(gir_sources)
