--- a/configure.ac
+++ b/configure.ac
@@ -323,7 +323,7 @@ else
         --disable-programs --disable-ffserver --disable-ffplay --disable-ffprobe --disable-ffmpeg \
         --disable-encoder=flac --disable-protocols --disable-devices\
         --disable-network --disable-hwaccels --disable-dxva2 --disable-vdpau\
-        --disable-filters --disable-doc --enable-optimizations"
+        --disable-filters --disable-doc --disable-vda --enable-optimizations"
 
   if test "x$enable_gpl" == "xyes"; then
     emblibav_configure_args="$emblibav_configure_args --enable-gpl"
