qt: don't error out if Qt X11 could not be found
PCK_CHECK_MODULES default error-if-not-found implementation errors
so override it with a simple notice that we couldn't find the library.

--- a/configure.ac
+++ b/configure.ac
@@ -2619,7 +2619,7 @@ AG_GST_CHECK_FEATURE(QT, [Qt elements], qt, [
             QT_LIBS="$QT_LIBS $QT_X11_LIBS"
             AC_SUBST([QT_CFLAGS])
             AC_SUBST([QT_LIBS])
-        ], [])
+        ], [AC_MSG_NOTICE([Could not find Qt X11 integration])])
       fi
   ], [
       HAVE_QT="no"
