build: add -f flag to `rm` in clean target
This way, running `make clean` twice would not
generate an error anymore.

--- a/sources/Makefile.am
+++ b/sources/Makefile.am
@@ -90,4 +90,4 @@ uninstall-local:
 	echo "$(GACUTIL) /u $(ASSEMBLY_NAME) $(GACUTIL_FLAGS)"; \
         $(GACUTIL) /u $(ASSEMBLY_NAME) $(GACUTIL_FLAGS) || exit 1;
 clean-local:
-	rm -r generated/*
+	rm -rf generated/*
