gtk: Add GtkGstBaseWidget
This is a "pseudo" base class. Basically it's a shared instance
and class structure and a shared set of function between the
two widget. It cannot have it's own type like normal base class
since the one instance will implement GtkGLArea while the other
implements GtkDrawingAreay. To workaround this, the parent instance
and class is a union of both.

https://bugzilla.gnome.org/show_bug.cgi?id=752441

--- a/ext/gtk/Makefile.am
+++ b/ext/gtk/Makefile.am
@@ -8,6 +8,8 @@ lib_LTLIBRARIES =
 
 # source
 sources = \
+	gtkgstbasewidget.c \
+	gtkgstbasewidget.h \
 	gtkgstwidget.c \
 	gtkgstwidget.h \
 	gstgtksink.c \
