gtkbasesink: Create a base class
This contains all the common code between the gtkglsink and
gtksink.

https://bugzilla.gnome.org/show_bug.cgi?id=752441

--- a/ext/gtk/Makefile.am
+++ b/ext/gtk/Makefile.am
@@ -12,6 +12,8 @@ sources = \
 	gtkgstbasewidget.h \
 	gtkgstwidget.c \
 	gtkgstwidget.h \
+	gstgtkbasesink.c \
+	gstgtkbasesink.h \
 	gstgtksink.c \
 	gstgtksink.h \
 	gstplugin.c \
