qt: Don't dist files that might not exist
We only require moc building at build time.

--- a/ext/qt/Makefile.am
+++ b/ext/qt/Makefile.am
@@ -13,6 +13,8 @@ moc_generated = \
 BUILT_SOURCES = $(moc_generated)
 CLEANFILES = $(moc_generated)
 
+nodist_libqtsink_la_SOURCES = $(BUILT_SOURCES)
+
 libqtsink_la_SOURCES = \
 	gstqsgtexture.cc \
 	qtitem.cc \
