midi: add an ALSA MIDI sequencer source
The alsamidisrc element allows to get input event from ALSA MIDI
sequencer devices, and possibly convert them to sound using some
downstream element like fluiddec.

https://bugzilla.gnome.org/show_bug.cgi?id=738687

--- a/gst/midi/Makefile.am
+++ b/gst/midi/Makefile.am
@@ -14,3 +14,10 @@ libgstmidi_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS)
 libgstmidi_la_LIBTOOLFLAGS = $(GST_PLUGIN_LIBTOOLFLAGS)
 
 noinst_HEADERS = midiparse.h
+
+if USE_ALSA
+libgstmidi_la_SOURCES += alsamidisrc.c
+libgstmidi_la_CFLAGS += $(ALSA_FLAGS)
+libgstmidi_la_LIBADD += $(ALSA_LIBS)
+noinst_HEADERS += alsamidisrc.h
+endif
