playback/player: player: Refactor video rendering API
There's a GstPlayerVideoRenderer interface now, which defines how video
rendering happens in GstPlayer. Included is an implementation for the
GstVideoOverlay interface, and inside the GTK example application one for
gtksink/gtkglsink.

--- a/playback/player/gtk/Makefile.am
+++ b/playback/player/gtk/Makefile.am
@@ -26,11 +26,11 @@ gtk-play-resources.h: resources/gresources.xml \
 
 BUILT_SOURCES: gtk-play-resources.c gtk-play-resources.h
 
-gtk_play_SOURCES = gtk-play.c gtk-play-resources.c
+gtk_play_SOURCES = gtk-play.c gtk-play-resources.c gtk-video-renderer.c
 
 LDADD = $(top_builddir)/lib/gst/player/.libs/libgstplayer-@GST_PLAYER_API_VERSION@.la \
 	$(GSTREAMER_LIBS) $(GTK_LIBS) $(GTK_X11_LIBS) $(GLIB_LIBS) $(LIBM) $(GMODULE_LIBS)
 
 AM_CFLAGS = -I$(top_srcdir)/lib -I$(top_builddir)/lib $(GSTREAMER_CFLAGS) $(GTK_CFLAGS) $(GTK_X11_CFLAGS) $(GLIB_CFLAGS) $(GMODULE_CFLAGS)
 
-noinst_HEADERS = gtk-play-resources.h
+noinst_HEADERS = gtk-play-resources.h gtk-video-renderer.h
