--- a/.arcconfig
+++ b/.arcconfig
@@ -1,3 +1,3 @@
 {
-    "phabricator.uri" : "http://phabricator.freedesktop.org/"
+    "phabricator.uri" : "https:\/\/phabricator.freedesktop.org\/api\/"
 }
