configure: check for Qt version
Usage of QSGSimpleTextureNode::setOwnsTexture() was added in commit
6b8cf8419d8ea80081de8150a6b1c3cf763c4d69, this function was added in
Qt 5.4.0. Check for this version or later.

https://bugzilla.gnome.org/show_bug.cgi?id=753812

--- a/configure.ac
+++ b/configure.ac
@@ -2620,7 +2620,7 @@ AM_CONDITIONAL(USE_GTK3_GL, test "x$HAVE_GTK3_GL" = "xyes")
 dnl *** Qt ***
 translit(dnm, m, l) AM_CONDITIONAL(USE_QT, true)
 AG_GST_CHECK_FEATURE(QT, [Qt elements], qt, [
-  PKG_CHECK_MODULES(QT, Qt5Core Qt5Gui Qt5Quick, [
+  PKG_CHECK_MODULES(QT, Qt5Core Qt5Gui Qt5Quick >= 5.4.0, [
       QT_PATH=`$PKG_CONFIG --variable=exec_prefix Qt5Core`
       QT_HOST_PATH=`$PKG_CONFIG --variable=host_bins Qt5Core`
       AC_PATH_PROGS(MOC, [moc-qt5 moc], moc, ["${QT_HOST_PATH}" "${QT_PATH}/bin"])
